# support-orchestrator-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demo_data/: customers.xlsx  generate_customers.py  mock_app.html
docs/: workflow-a-broken-feature.md
src/agents/: base_specialist.py
src/agents/browser/: agent.py
src/agents/excel/: agent.py
src/agents/github/: agent.py
src/agents/linear/: agent.py
src/config/: agent_config.yaml.example
src/orchestrator/: orchestrator.py
src/tests/: __init__.py  conftest.py  test_01_unit.py  test_02_provisioning.py  test_03_messaging.py  test_04_orchestration_e2e.py
src/tests/logger/: __init__.py  event_tracker.py  narrative_formatter.py  structured_formatter.py  test_logger.py
src/thenvoi_integration/: agent_registry.py  room_manager.py  setup_demo.py  teardown_demo.py
ui/: index.html
ui/bridge/: event_bridge.py  requirements.txt
ui/scripts/: agent-cards.js  app.js  config.js  message-flow.js  timeline.js  topology.js
ui/styles/: agent-cards.css  effects.css  main.css  message-flow.css  timeline.css  topology.css
